--- a/Languages/Programming_Languages/GoLang/README.adoc
+++ b/Languages/Programming_Languages/GoLang/README.adoc
@@ -101,6 +101,30 @@ for i < len(arr) {
 }
 ```
 
+==== range
+This is for loop iterating over slice or map.
+ 1. Returns: when iterating over slice
+  value-1: index inside slice
+  value-2: copy of the element at that index.
+ 2. index or value anything can be skipped using "_"
+```
+package main
+import "fmt"
+var slc = []int{1, 2, 3}        //Created Slice
+func main() {
+        for i, v := range slc {
+                fmt.Printf("slc[%d]=%d,\t", i, v)       //slc[0]=1, slc[1]=2, slc[2]=3  //1
+        }
+        for _, v := range slc {
+                fmt.Printf("slc[]=%d,\t", v)       //slc[]=1, slc[]=2, slc[]=3  //2
+        }
+}
+# /usr/local/go/bin/go build range.go 
+# ./range 
+slc[0]=1,	slc[1]=2,	slc[2]=3
+slc[]=1,	slc[]=2,	slc[]=3
+```
+
 === Package/Modules in Go = link:/Languages/Programming_Languages/c%2B%2B/namespaces[C++(namespace)] = link:/Languages/Programming_Languages/Rust/Crates_Packages_Modules[Rust(crates)]
 - The package statement is always the first line in a Go file. It specifies the package name that the file belongs to.
 - This is unique namespace for (variables, functions, types, etc.) defined within the package.
