--- a/DS_Questions/Data_Structures/Stacks/Questions/Stack_using_two_queues.adoc
+++ b/DS_Questions/Data_Structures/Stacks/Questions/Stack_using_two_queues.adoc
@@ -1,6 +1,8 @@
 :toc:
 :toclevels: 6
 
+=== link:https://youtu.be/E56AzUO1zpI[Self Video]
+
 === link:https://leetcode.com/problems/implement-stack-using-queues/description/[225. Implement Stack using Queues]
 - Implement a last-in-first-out (LIFO) stack using only two queues. The implemented stack should support all the functions of a normal stack (push, top, pop, and empty).
 - Implement the MyStack class:
