--- a/DS_Questions/Questions/Number/Bitwise/Counting_Bits.adoc
+++ b/DS_Questions/Questions/Number/Bitwise/Counting_Bits.adoc
@@ -121,20 +121,82 @@ number    bit    number of ON bits(dp)   Power of 2
 * *Space:* O(n). Same sized dp array is needed
 
 ==== Code
+===== C++
+```cpp
+class Solution {
+public:
+    vector<int> countBits(int n) {
+        vector<int> dp(n+1, 0);
+        if (n==0)
+            return dp;
+
+        dp[1]=1;
+        int present = 0;        //present pow of 2
+        int next = 2;            //next pow of 2
+
+        for (int i=2; i<=n; ++i) {
+            if (i == next) {
+                // if i is same as power of 2
+                present = next;
+                next *= 2;
+                dp[i] = 1;
+            } else {
+                dp [i] = dp[i-present] + dp[present];
+            }
+        }
+        return dp;
+    }
+};
+```
 ===== Python
 ```py
 class Solution:
     def countBits(self, n: int) -> List[int]:
-        dp = [0] * (n + 1)    # Take a dp array of size=n+1 and initialize to 0
-        pow_of_2_num = 1      # Used to keep track of number which is power of 2
+        dp = [0] * (n + 1)
+        if n == 0:
+            return dp
 
-        for i in range(1, n + 1):            # Iterate from 1 to n
-            if pow_of_2_num * 2 == i:        
-                # if number is power of 2, it will always have 1 ON bit. 2=10, 4=100, 8=1000
-                pow_of_2_num *= 2
+        dp[1] = 1
+        present = 0  # present pow of 2
+        next = 2     # next pow of 2
+
+        for i in range(2, n + 1):
+            if i == next:
+                present = next
+                next *= 2
                 dp[i] = 1
             else:
-                dp[i] = dp[i - pow_of_2_num] + 1
-            
+                dp[i] = dp[i - present] + dp[present]
+
         return dp
+```
+===== Rust
+```rs
+impl Solution {
+    pub fn count_bits(n: i32) -> Vec<i32> {
+        let mut dp = vec![0; (n as usize +1)]; 
+        if n == 0 {
+            return dp;
+        }
+        dp[1] = 1;
+
+        let mut present:usize = 0;
+        let mut next:usize = 2;
+
+        for i in 2 .. n+1 {
+            if i as usize == next {
+                present = next;
+                next *= 2;
+                dp[i as usize] = 1;
+            } else {
+                dp[i  as usize] = dp[i as usize -present] + dp[present];
+            }
+        }
+        dp
+    }
+}
+```
+===== Go
+```rs
+
 ```
