--- a/DS_Questions/Questions/Number/Bitwise/Counting_Bits.adoc
+++ b/DS_Questions/Questions/Number/Bitwise/Counting_Bits.adoc
@@ -198,5 +198,28 @@ impl Solution {
 ```
 ===== Go
 ```rs
+func countBits(n int) []int {
+    dp := make([]int, n+1)
+    for i:=0; i<n+1; i++ {
+        dp[i] = 0;
+    }
+    if n == 0 {
+        return dp;
+    }
 
+    dp[1] = 1;
+    var present int = 0;
+    var next int = 2;
+
+    for i:=2; i<n+1; i++ {
+        if i == next {
+            present = next;
+            next *= 2;
+            dp[i] = 1;
+        } else {
+            dp[i] = dp[i-present] + dp[present];
+        }
+    }
+    return dp;
+}
 ```
