--- a/System-Design/Concepts/Databases/README.adoc
+++ b/System-Design/Concepts/Databases/README.adoc
@@ -5,15 +5,35 @@
 Today most organization are using SQL+noSQL DB combinations. 2019 stats:   MySQL + MongoDB: 34.15%,  MySQL + PostgreSQL: 9.76%
 
 |===
-|DB| SQL, Relational, Structured | noSQL, nonRelational, unStructured
+| DB | SQL, Relational, Structured | noSQL, nonRelational, unStructured
 
-|Examples | Amazon(Aurora, RDS), MySQL, postgreSQL, mariaDB|Semistructured: Amazon (S3, dynamoDB), Apache Cassandra<br> Unstructured: Amazon S3, Apache CouchDB, MongoDB
-|Types | ORDBMS(Object RDBMS):RDBMS build on OOD.Eg:PostGreSQL <br> RDBMS: mySQL|a. KEY-VALUE DB:<br> - redis, Amazon dynamoDB, Voldemort, sled(rust) <br> b. WIDE-COLUMN DB:<br> - Stores data as columns instead of rows. Eg: Cassandra, HBase <br> c. DOCUMENT DB: <br> - Data is stored in documents(XML, JSON, binary) Eg: mongoDB, Amazon dynamoDB. <br> d. GRAPH DB: <br> Data is stored in form of graph.Eg: Neo4J, HyperGraphDB
-|Storage format | Table(Records searched using primary key) | <key, value> or xml or json or objects
-|Huge data support | [no(becomes slow). Can store upto ~1TB](#w1) | yes
+|Examples 
+a| 
+* Amazon(Aurora, RDS), MySQL, postgreSQL, mariaDB
+a|
+* Semistructured: Amazon (S3, dynamoDB), Apache Cassandra 
+* Unstructured: Amazon S3, Apache CouchDB, MongoDB
+
+|Types
+a|
+* ORDBMS(Object RDBMS):RDBMS build on OOD.Eg:PostGreSQL 
+* RDBMS: mySQL
+a|
+* a. KEY-VALUE DB: redis, Amazon dynamoDB, Voldemort, sled(rust) 
+* b. WIDE-COLUMN DB: Stores data as columns instead of rows. Eg: Cassandra, HBase 
+* c. DOCUMENT DB: Data is stored in documents(XML, JSON, binary) Eg: mongoDB, Amazon dynamoDB.
+* d. GRAPH DB: Data is stored in form of graph.Eg: Neo4J, HyperGraphDB
+
+| Storage format |Table(Records searched using primary key) | <key, value> or xml or json or objects
+
+| Huge data support | no(becomes slow). Can store upto ~1TB | yes
+
 |Storage | May be on 1 or multiple servers | Always on multiple low cost nodes[commodity hardware]
-|Scaling | [Vertical. No Horizontal](#w2) | Horizontal, cheaper, raw data can be pushed:no schema, pro
+
+|Scaling | Vertical. No Horizontal | Horizontal, cheaper, raw data can be pushed:no schema, pro
+
 |Tech Support | Good, query-writing:simple | Poor, query-writing:complex
+
 |Schema | fixed | not fixed. defining schema for unstructured data is very tough
 |===
 
