--- a/System-Design/Scalable/twitter/README.adoc
+++ b/System-Design/Scalable/twitter/README.adoc
@@ -61,8 +61,8 @@ DAU = 100M. Active/sec = 100M/86400 = 1000/sec
 ```
 
 [[storage_estimates]]
-=== Storage Estimates
-* *Ask Interviewer: How many tweet(writes)?* 10% of DAU = 10M
+=== Storage Estimates (Writes/sec)
+* *Ask Interviewer: How many tweet(writes)?* 10% of DAU = 10M/day. 100 tweets/sec
 ```
 1 tweet size = 8k(header)+1M(payload) =~ 1MB
 1 day storage needed:   10M x 1M = 10TB/day. 
@@ -73,10 +73,11 @@ DAU = 100M. Active/sec = 100M/86400 = 1000/sec
 10TB/day. 10TB/86400 = 100MB/sec
 
 [[reads_per_sec]]
-=== Timeline Reads/sec. Outgoing Tweets/sec
+=== Timeline Reads/sec. Outgoing Tweets/sec. Outgoing data/sec
 * **Ask Interviewer Followers/user?** All users will not have same number of followers. 
 ** 0.1% have 1M Followers=0.1% x 100M = 1M users have 1M followers. 10% have 1000-10k followers(Let's ignore these).
-** Outgoing Tweets. DAU(100M). 1M(followers)
+** 1 user having 1M follower tweets. System has to make 1M timeline writes
+** <storage_estimates, Writess/sec=100>> 1M x 100 = 1T/sec timeline writes/sec. 1T x 1MB(tweet size) = 1PB/sec
 
 [[db]]
 == 4. DB Schema (What are entities in system)
@@ -132,19 +133,12 @@ SELECT tweets.*, users.* FROM tweets
  WHERE follows.follower_id = current_user
 ```
 ==== Problems: Huge Data to Fanout + Timeline creation at runtime
+* <<reads_per_sec, Outgoing bytes/sec = 1PB/sec>>
 
-
-
-* We know <<boe, DAU=100M. Req/sec=100M/86400=1000. On Peak=3000 timeline read req/sec>>. 
-** Every user will see his timeline. Hence timeline requests = 3000/sec.
-* <<boe, 1 tweet size=~ 1MB>>. 1 followee does 1 tweet. 1MB x 1000 = 1GB/user request
-* Fanout data = 1GB x 3000 = 3TB/sec
-
-===== Solution: Calculate timeline before time
+===== Solution: Calculate timeline of user before time
 * Suppose usr=amit follows usr=mike.
-* Calculate timeline of usr=amit ahead of time and store in link:/System-Design/Concepts/Cache[Cache]
+* Calculate timeline of usr=amit ahead of time and store in link:/System-Design/Concepts/Cache[Cache], But for 
 * When usr=mike posts a tweet, add mike's tweet to pre-calculated timeline of usr=amit.
-
 
 #### Storing Tweets(text,photos,videos)
 can be stored on [Shard-DB](/System-Design/Concepts/Databases/Database_Scaling) based on userId, TweetId. But all approaches has issues
